Fix gallerien not showing on IE

--- a/web/app/themes/nattours/assets/styles/layouts/_location.scss
+++ b/web/app/themes/nattours/assets/styles/layouts/_location.scss
@@ -3,11 +3,11 @@
     @include make-xs-column(12, 0);
     @include make-sm-column(12);
     width: auto !important;
-    max-width: 100%; 
+    max-width: 100%;
     list-style: none;
     margin: 0;
     position: absolute;
-      bottom: rem-calc(3);
+    bottom: rem-calc(3);
     & > li {
       font-size: rem-calc(24);
       display: inline-block;
@@ -23,13 +23,13 @@
     }
   }
   &__images {
-    display: none;
+    @extend .hidden-xs;
     img {
       min-width: 100%;
     }
   }
   &__gallery {
-    display: initial;
+    @extend .visible-xs;
     .slick-slide {
       margin: rem-calc(12);
       height: rem-calc(222);
@@ -42,7 +42,11 @@
       position: static;
     }
   }
-  &__home, &__intro, &__services, &__nature, &__history {
+  &__home,
+  &__intro,
+  &__services,
+  &__nature,
+  &__history {
     padding-top: rem-calc(18);
     @extend .container-fluid;
     @include content-section();
